添加启动停止脚本